--- a/HackerRank Solutions.ipynb
+++ b/HackerRank Solutions.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,23 +70,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3, 4]\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "6"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,11 +91,79 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Question 2. Approximate Matching"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def testString(txt, Prefix):\n",
+    "    txtList = list(txt)\n",
+    "    #print(txt, Prefix)\n",
+    "    PreList = list(Prefix)\n",
+    "    PreScore = \"\"\n",
+    "    firstIndex = 0\n",
+    "    while firstIndex != -1:\n",
+    "        innd = 0\n",
+    "        score = \"\"\n",
+    "        # Findong the first letter match\n",
+    "        try:\n",
+    "            firstIndex = PreList.index(txt[innd])\n",
+    "        except:\n",
+    "            firstIndex = -1\n",
+    "            break\n",
+    "        # Checking the rest\n",
+    "        for g in range(firstIndex, len(PreList)):\n",
+    "            if PreList[g] == txt[innd]:\n",
+    "                score += txt[innd]\n",
+    "            else:\n",
+    "                break\n",
+    "            innd += 1\n",
+    "        PreList.pop(firstIndex)\n",
+    "        if len(score) > len(PreScore):\n",
+    "            PreScore = score\n",
+    "    return PreScore\n",
+    "\n",
+    "def AproxMatch(text, preFix, sufFix):\n",
+    "    firstPart = testString(text,preFix)\n",
+    "    #print(firstPart)\n",
+    "    PreScore = len(firstPart)\n",
+    "    text2 = text[len(firstPart):]\n",
+    "    #print(text2,sufFix)\n",
+    "    secpart = testString(text2,sufFix)\n",
+    "    SecScore = len(secpart)\n",
+    "    #print(secpart)\n",
+    "    TextScore = PreScore + SecScore\n",
+    "    TextPart = firstPart + secpart\n",
+    "    print('TextScore is {} and Text is {}'.format(TextScore, TextPart))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TextScore is 5 and Text is engin\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"engine\"\n",
+    "pre = \"raven\"\n",
+    "suf = \"ginkgo\"\n",
+    "\n",
+    "AproxMatch(text, pre, suf)"
+   ]
   },
   {
    "cell_type": "code",
