--- a/HackerRank Solutions.ipynb
+++ b/HackerRank Solutions.ipynb
@@ -166,6 +166,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Question 7. Username Disparity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def UsernameDisparity(txt):\n",
+    "    imitation = list(txt)\n",
+    "    score = list()\n",
+    "    for k in range(-1,len(txt)):\n",
+    "        if k != -1:\n",
+    "            imitation.pop(0)\n",
+    "        count = 0\n",
+    "        for m in range(len(imitation)):\n",
+    "            if imitation[m] == txt[m]:\n",
+    "                count += 1\n",
+    "            else:\n",
+    "                break\n",
+    "        score.append(count)\n",
+    "    return sum(score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(UsernameDisparity(\"ababa\"))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
